<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/btnSobre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginRight="@dimen/margin_right"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:background="@color/colorPrimary"
        android:text="@string/about"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnCadastro"
        app:layout_constraintStart_toStartOf="@+id/btnCadastro"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginEnd="@dimen/margin_right" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/logo_dimem"
        android:layout_height="@dimen/logo_dimem"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginTop="@dimen/default_margin_login"
        android:layout_marginEnd="@dimen/margin_right"
        android:layout_marginRight="@dimen/margin_right"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginTop="@dimen/default_margin_login"
        android:layout_marginEnd="@dimen/margin_right"
        android:layout_marginRight="@dimen/margin_right"
        android:ems="10"
        android:hint="@string/user"
        android:inputType="textPersonName"
        android:textColorHighlight="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginEnd="@dimen/margin_right"
        android:layout_marginRight="@dimen/margin_right"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHighlight="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginTop="@dimen/default_margin_login"
        android:layout_marginEnd="@dimen/margin_right"
        android:layout_marginRight="@dimen/margin_right"
        android:text="@string/lbLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <CheckBox
        android:id="@+id/cbStayid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginEnd="@dimen/margin_right"
        android:layout_marginRight="@dimen/margin_right"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:text="@string/stay_connected"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="@+id/pass"
        app:layout_constraintStart_toStartOf="@+id/pass"
        app:layout_constraintTop_toBottomOf="@+id/pass" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginTop="@dimen/default_margin_login"
        android:layout_marginEnd="@dimen/margin_right"
        android:layout_marginRight="@dimen/margin_right"
        android:background="@color/colorPrimary"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass" />

    <Button
        android:id="@+id/btnCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginEnd="@dimen/margin_right"
        android:layout_marginRight="@dimen/margin_right"
        android:background="@color/colorPrimary"
        android:text="@string/register"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/btnLogin"
        app:layout_constraintStart_toStartOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

</android.support.constraint.ConstraintLayout>