<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SobreActivity">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:layout_marginBottom="8dp"
        android:text="@string/by1"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginBottom="@dimen/margin_bottom_version"
        android:text="@string/by2"
        app:layout_constraintBottom_toTopOf="@+id/tvVersion"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView" />
    <ImageView
        android:src="@drawable/logo"
        android:layout_width="@dimen/logo_dimem"
        android:layout_height="@dimen/logo_dimem"
        android:id="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/margin_top"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginStart="@dimen/margin_left"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/margin_right"
        android:layout_marginRight="@dimen/margin_right"
        android:layout_marginBottom="@dimen/margin_bottom_logo"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        android:contentDescription="@string/app_name"
        android:adjustViewBounds="false"
        android:scaleType="centerInside"/>
    <TextView
        android:text="@string/version"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tvVersion"
        android:layout_marginBottom="@dimen/margin_bottom_version"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        android:layout_marginEnd="@dimen/margin_right"
        android:layout_marginRight="@dimen/margin_right"
        app:layout_constraintStart_toStartOf="@+id/textView"
        android:gravity="center"/>

</android.support.constraint.ConstraintLayout>